Added first card with DEFENDER ability.